AnimTransform: Fix move tool not respecting, modifying, or outright breaking animated masks.

Should work more or less how the user expects. There could be more to streamline the process
to make it less error prone to interface with animation, and `setParameters` sometimes causing
animations to "break" will need to be investigated at some point. For now, it works.

BUG:441974